--- a/sources/css/project.css
+++ b/sources/css/project.css
@@ -1,14 +1,19 @@
-*
-{
-	font-family: helvetiva, sans-serif;
+* {
+    font-family: helvetiva, sans-serif;
 
 }
 
 h1 {
-	text-align: center;
+    text-align: center;
 }
 
 p {
     border-style: solid;
     border-width: 5px;
+}
+
+.footr {
+
+    position: fixed;
+    bottom: 0px;
 }
