--- a/sources/css/project.css
+++ b/sources/css/project.css
@@ -7,13 +7,27 @@ h1 {
     text-align: center;
 }
 
-p {
+
+.coords {
     border-style: solid;
-    border-width: 5px;
+    border-width: 2px;
+    padding: 5px;
+}
+
+.headr{
+    border-style: solid;
+    border-width: 2px;
+    background-color: aliceblue;
 }
 
 .footr {
 
     position: fixed;
     bottom: 0px;
+}
+
+.boxheader{
+    background: #000;
+    color: #fff;
+    padding: 3px;
 }
