--- a/sources/css/project.css
+++ b/sources/css/project.css
@@ -1,14 +1,19 @@
+/* author: android0x17@gmail.com  */
+
 * {
     font-family: helvetiva, sans-serif;
+    font-size: 1.05em;
 
 }
 
 h1 {
     text-align: center;
+    font-size: 2em;
+    padding: 5px;
 }
 
 
-.coords {
+.box {
     border-style: solid;
     border-width: 2px;
     padding: 5px;
@@ -23,7 +28,9 @@ h1 {
 .footr {
 
     position: fixed;
-    bottom: 0px;
+    height: 30px;
+    bottom: 50px;
+    font-size: 30px;
 }
 
 .boxheader{
