--- a/sources/css/project.css
+++ b/sources/css/project.css
@@ -27,9 +27,9 @@ h1 {
 
 .footr {
 
-    position: fixed;
+    position: relative;
     height: 30px;
-    bottom: 50px;
+    bottom: 10px;
     font-size: 30px;
 }
 
