--- a/sources/css/project.css
+++ b/sources/css/project.css
@@ -1,8 +1,16 @@
 /* author: android0x17@gmail.com  */
 
+body{
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    background: #fff;
+    color: #484848;
+}
+
 * {
     font-family: helvetiva, sans-serif;
-    font-size: 1.05em;
+    font-size: 1.02em;
 
 }
 
@@ -15,14 +23,19 @@ h1 {
 
 .box {
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px;
     padding: 5px;
+    box-shadow:2px 2px 2px #666;
+}
+
+.center {
+    text-align: center;
 }
 
 .headr{
-    border-style: solid;
-    border-width: 2px;
+
     background-color: aliceblue;
+    box-shadow:2px 2px 2px #666;
 }
 
 .footr {
@@ -30,11 +43,13 @@ h1 {
     position: relative;
     height: 30px;
     bottom: 10px;
-    font-size: 30px;
+
 }
 
 .boxheader{
-    background: #000;
-    color: #fff;
-    padding: 3px;
+    background-color: #484848;
+    color: aliceblue;
+    padding: 4px;
+    width: 50%;
+    font-weight:bold;
 }
