--- a/sources/css/project.css
+++ b/sources/css/project.css
@@ -1,24 +1,45 @@
 /* author: android0x17@gmail.com  */
 
-body{
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    background: #fff;
-    color: #484848;
-}
 
 * {
+    margin-top: 0;
     font-family: helvetiva, sans-serif;
     font-size: 1.02em;
 
 }
 
+body{
+    top:0;
+    width: 100%;
+    margin-top: 0;
+    margin: 0px;
+    padding: 0px;
+    background: #fff;
+    color: #484848;
+}
+
+.headr{
+    margin-top: 0px;
+    width: 100%;
+    background-color: #484848;
+    box-shadow:2px 2px 2px #666;
+}
+
+.content{
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 h1 {
+    color: aliceblue;
     text-align: center;
     font-size: 2em;
     padding: 5px;
 }
+
+
+
 
 
 .box {
@@ -32,11 +53,7 @@ h1 {
     text-align: center;
 }
 
-.headr{
 
-    background-color: aliceblue;
-    box-shadow:2px 2px 2px #666;
-}
 
 .footr {
 
