--- a/sources/css/project.css
+++ b/sources/css/project.css
@@ -60,6 +60,29 @@ h1 {
 
 }
 
+
+
+.center {
+    text-align: center;
+}
+
+
+.footrpic {
+    float: left;
+    width: 30px;
+}
+
+.footrtxt {
+    float: right;
+    width: 85%;
+}
+
+.footr {
+    width: 100%;
+    position: relative;
+    /*bottom: 10px;*/
+}
+
 .box {
     border-style: solid;
     border-width: 1px;
@@ -67,24 +90,20 @@ h1 {
     box-shadow:2px 2px 2px #666;
 }
 
-.center {
-    text-align: center;
-}
-
-
-
-.footr {
-
-    position: relative;
-    height: 30px;
-    bottom: 10px;
-
-}
-
 .boxheader{
     background-color: #484848;
     color: aliceblue;
     padding: 4px;
-    width: 50%;
+    width: 80%;
     font-weight:bold;
+}
+
+.boxfooter{
+    border-style: solid;
+    border-width: 1px;
+    background-color: #fff;
+    color: #484848;
+    padding: 2px;
+    font-size: 0.7em;
+    box-shadow:2px 2px 2px #666;
 }
